fix pub title having too much line spacing

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -61,7 +61,9 @@ p {
 }
 /*pub list*/
 .pub-title {
-    line-height: 2;
+    line-height: 1.1;
+    display: inline-block;
+    padding-bottom: 0.5rem;
 }
 .pub-author {
     line-height: 1.2;
